PYIC-6973: Refactor web driving permit test VCs